[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1.0.0"
leptos = { version = "0.4.10", features = ["csr"] }
leptos_router = { version = "0.4.10" , features = ["csr"] }
log = "0.4.20"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
web-sys = "0.3.64"
features = [
	'CanvasRenderingContext2d',
	'Document',
	'DomRect',
	'Element',
	'HtmlCanvasElement',
	'Window',
]


